# Methods-of-Learning-and-Scientific-Research

./: .gitignore  Plan-Coding-HarnessEval.md  Plan-HarnessEval.md  Plan.md  README.md  flowchart_PPNCKH.html  note.md  phuong-phap-viet-de-cuong-nckh.md  plan_NCKH.html  template_NCKH.html  template_tinh_moi.html  test_latex.tex
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/: .env.example  HUONG-DAN-CHAY.md  dashboard.html  pyproject.toml  requirements.txt  start_harness_eval.bat  start_harness_eval.sh  streamlit_app.py
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/.streamlit/: config.toml
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/app/: .env.example  index.html  server.py
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/app/templates/: anova.html  base.html
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/docs/: metrics-anova-explained.md  note.md
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/harness_eval/: __init__.py
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/harness_eval/configs/: experiment.py  tool_config.py
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/harness_eval/data/: __init__.py  loader.py  swe_bench_tasks.json
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/scripts/: run_ollama_task.py
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/st_pages/: anova.py  compare.py  config_builder.py  log_viewer.py  pipeline_viewer.py
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/st_utils/: charts.py  data_loader.py  run_manager.py
NCKK-Docs/de-tai/DE-CUONG-HarnessEval-v2/tests/: test_cli.py  test_configs.py  test_data_loader.py  test_metrics.py  test_parser.py  test_run_manager.py
plans/: Plan-AgentFramework.md  (+6 more)
(+297 files in other folders)
